--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
         <link rel="preload" href="./img/5.jpg" as="image" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" as="style" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div id="container">
@@ -22,9 +23,8 @@
                     <div class="social-link"><a class="color-light" href="https://github.com/esqew">GitHub</a></div>
                     <div class="social-link"><a class="color-light" href="https://stackoverflow.com/users/269970/esqew">Stack Overflow</a></div>
                 </div>
-                <div class="clear"></div>
-                <hr />
             </div>
+            <hr />
             <div id="bottom">
                 <img id="cover" />
             </div>
