further fleshed out grid

--- a/src/index.html
+++ b/src/index.html
@@ -13,18 +13,18 @@
     </head>
     <body>
         <div id="container">
-            <div id="top">
                 <div id="logo-container">
                     <div id="logo">SEAN QUINN</div>
-                    <div id="tagline color-light">TECHNOLOGIST&#65372;THOUGHT LEADER</div>
+                    <div id="tagline color-light">TECHNOLOGIST</div>
                 </div>
                 <div id="social-container">
                     <div class="social-link"><a class="color-light" href="https://linkedin.com/in/seanfquinn">LinkedIn</a></div>
                     <div class="social-link"><a class="color-light" href="https://github.com/esqew">GitHub</a></div>
                     <div class="social-link"><a class="color-light" href="https://stackoverflow.com/users/269970/esqew">Stack Overflow</a></div>
                 </div>
+            <div id="break">
+                <hr />
             </div>
-            <hr />
             <div id="bottom">
                 <img id="cover" />
             </div>
