completed responsiveness updates

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
                     <div id="tagline color-light">TECHNOLOGIST</div>
                 </div>
                 <div id="social-container">
-                    <div class="social-link"><a class="color-light" href="https://linkedin.com/in/seanfquinn">LinkedIn</a></div>
-                    <div class="social-link"><a class="color-light" href="https://github.com/esqew">GitHub</a></div>
-                    <div class="social-link"><a class="color-light" href="https://stackoverflow.com/users/269970/esqew">Stack Overflow</a></div>
+                    <div class="social-link"><a class="color-light" href="https://linkedin.com/in/seanfquinn">LinkedIn &rarr;</a></div>
+                    <div class="social-link"><a class="color-light" href="https://github.com/esqew">GitHub &rarr;</a></div>
+                    <div class="social-link"><a class="color-light" href="https://stackoverflow.com/users/269970/esqew">Stack Overflow &rarr;</a></div>
                 </div>
             <div id="break">
                 <hr />
