added google analytics tracking code & beautified src/index.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Sean F Quinn | sfq.xyz</title>
-        <link rel="preload" href="./img/1.jpg" as="image" />
-        <link rel="preload" href="./img/2.jpg" as="image" />
-        <link rel="preload" href="./img/3.jpg" as="image" />
-        <link rel="preload" href="./img/4.jpg" as="image" />
-        <link rel="preload" href="./img/5.jpg" as="image" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" as="style" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <div id="container">
-                <div id="logo-container">
-                    <div id="logo">SEAN QUINN</div>
-                    <div id="tagline color-light">TECHNOLOGIST</div>
-                </div>
-                <div id="social-container">
-                    <div class="social-link"><a class="color-light" href="https://linkedin.com/in/seanfquinn">LinkedIn &rarr;</a></div>
-                    <div class="social-link"><a class="color-light" href="https://github.com/esqew">GitHub &rarr;</a></div>
-                    <div class="social-link"><a class="color-light" href="https://stackoverflow.com/users/269970/esqew">Stack Overflow &rarr;</a></div>
-                </div>
-            <div id="break">
-                <hr />
-            </div>
-            <div id="bottom">
-                <img id="cover" />
-            </div>
+
+<head>
+    <title>Sean F Quinn | sfq.xyz</title>
+    <link rel="preload" href="./img/1.jpg" as="image" />
+    <link rel="preload" href="./img/2.jpg" as="image" />
+    <link rel="preload" href="./img/3.jpg" as="image" />
+    <link rel="preload" href="./img/4.jpg" as="image" />
+    <link rel="preload" href="./img/5.jpg" as="image" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap"
+        as="style" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GZN2SRR1WR"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-GZN2SRR1WR');
+    </script>
+</head>
+
+<body>
+    <div id="container">
+        <div id="logo-container">
+            <div id="logo">SEAN QUINN</div>
+            <div id="tagline color-light">TECHNOLOGIST</div>
         </div>
-        <script src="./bundle.js"   ></script>
-    </body>
+        <div id="social-container">
+            <div class="social-link"><a class="color-light" href="https://linkedin.com/in/seanfquinn">LinkedIn
+                    &rarr;</a></div>
+            <div class="social-link"><a class="color-light" href="https://github.com/esqew">GitHub &rarr;</a></div>
+            <div class="social-link"><a class="color-light" href="https://stackoverflow.com/users/269970/esqew">Stack
+                    Overflow &rarr;</a></div>
+        </div>
+        <div id="break">
+            <hr />
+        </div>
+        <div id="bottom">
+            <img id="cover" />
+        </div>
+    </div>
+    <script src="./bundle.js"></script>
+</body>
+
 </html>
