--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
             <div class="social-link"><a class="color-light" href="https://github.com/esqew">GitHub &rarr;</a></div>
             <div class="social-link"><a class="color-light" href="https://stackoverflow.com/users/269970/esqew">Stack
                     Overflow &rarr;</a></div>
+            <div class="social-link"><a class="color-light" href="resume-web.pdf">R&eacute;sum&eacute; &rarr;</a></div>
         </div>
         <div id="break">
             <hr />
