added meta description and increased tap areas on mobile

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Sean F Quinn | sfq.xyz</title>
+    <meta name="description" content="Sean F. Quinn is a technologist from the United States, specializing in software solutions for organizations large & small." />
+
     <link rel="preload" href="./img/1.jpg" as="image" />
     <link rel="preload" href="./img/2.jpg" as="image" />
     <link rel="preload" href="./img/3.jpg" as="image" />
