converted jpg to webp

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
     <title>Sean F Quinn | sfq.xyz</title>
     <meta name="description" content="Sean F. Quinn is a technologist from the United States, specializing in software solutions for organizations large & small." />
 
-    <link rel="preload" href="./img/1.jpg" as="image" />
-    <link rel="preload" href="./img/2.jpg" as="image" />
-    <link rel="preload" href="./img/3.jpg" as="image" />
-    <link rel="preload" href="./img/4.jpg" as="image" />
-    <link rel="preload" href="./img/5.jpg" as="image" />
+    <link rel="preload" href="./img/1.webp" as="image" />
+    <link rel="preload" href="./img/2.webp" as="image" />
+    <link rel="preload" href="./img/3.webp" as="image" />
+    <link rel="preload" href="./img/4.webp" as="image" />
+    <link rel="preload" href="./img/5.webp" as="image" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap"
         as="style" />
