--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
             <img id="cover" />
         </div>
     </div>
-    <script src="./bundle.js"></script>
+    <script src="./bundle.js" charset="utf-8"></script>
 </body>
 
 </html>
